--- a/doc/foosnapper.8
+++ b/doc/foosnapper.8
@@ -18,15 +18,15 @@
 .hy
 .SH NAME
 .PP
-foosnapper - automatic filesystem snapshooter
+foosnapper - automatic filesystem snapshotter
 .SH SYNOPSIS
 .PP
 \f[B]foosnapper\f[R]
 .SH DESCRIPTION
 .PP
-\f[B]Foosnapper\f[R] is an automatic filesystem snapshooter, supporting
+\f[B]Foosnapper\f[R] is an automatic filesystem snapshotter, supporting
 Stratis and Btrfs filesystems.
-Snapshoot interval and retention can be configured per filesystem.
+Snapshot interval and retention can be configured per filesystem.
 .PP
 See \f[I]/etc/foosnapper.conf\f[R] for example configuration and
 documentation.
